Event was changed, create button

--- a/public/html/mandal_main.html
+++ b/public/html/mandal_main.html
@@ -26,22 +26,19 @@
 	<section>
 		<div class='article'>
 			<div id='mandal-container' class='zoomContainer'>
-					<div class='mandal-top'></div>
-					<div class='mandal-top'></div>
-					<div class='mandal-top'></div>
+					<div class='mandal-top' id='mandal1'></div>
+					<div class='mandal-top' id='mandal2'></div>
+					<div class='mandal-top' id='mandal3'></div>
 					
-					<div class='mandal-mid'></div>
-					<div class='mandal-mid'></div>
-					<div class='mandal-mid'></div>
+					<div class='mandal-mid' id='mandal4'></div>
+					<div class='mandal-center'></div>
+					<div class='mandal-mid' id='mandal5'></div>
 
-					<div class='mandal-bot'></div>
-					<div class='mandal-bot'></div>
-					<div class='mandal-bot'></div>
+					<div class='mandal-bot' id='mandal6'></div>
+					<div class='mandal-bot' id='mandal7'></div>
+					<div class='mandal-bot' id='mandal8'></div>
 			</div>
 		</div>
-		
-		<h1 class="click">TEST</h1>
-		
 	</section>
 	
 	<footer>
