--- a/public/html/mandal_table.html
+++ b/public/html/mandal_table.html
@@ -16,7 +16,7 @@
 
         <tr>
         <td class="table-article"></td>
-        <td class="table-article zoomTarget"></td>
+        <td class="table-article zoomTarget center"></td>
         <td class="table-article"></td>
         </tr>
 
