separate table and center ,do not working event on button

--- a/public/html/mandal_main.html
+++ b/public/html/mandal_main.html
@@ -6,6 +6,8 @@
 	<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 	<script src="../js/mandal_main.js"></script>
+	<script src="../js/mandal_table.js"></script>
+	
 	<script src="../js/vendor/jquery.zoomooz.js"></script>
 	<script src="../js/vendor/jquery.zoomooz.min.js"></script>
     
@@ -25,7 +27,7 @@
 
 	<section>
 		<div class='article'>
-			<div id='mandal-container' class='zoomContainer'>
+			<div id='mandal-container' class='zoomContainer zoomTarget'>
 					<div class='mandal-top' id='mandal1'></div>
 					<div class='mandal-top' id='mandal2'></div>
 					<div class='mandal-top' id='mandal3'></div>
