--- a/public/html/mandal_table.html
+++ b/public/html/mandal_table.html
@@ -1,9 +1,8 @@
 <html>
 <head>
 	<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-    <script src="../js/mandal_table.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <!--<script src="../js/mandal_table.js"></script>-->
+    <link rel="stylesheet" type="text/css" href="../css/mandal_main.css">
 </head>
 <body>
     
