--- a/public/html/mandal_main.html
+++ b/public/html/mandal_main.html
@@ -6,7 +6,6 @@
 	<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 	<script src="../js/mandal_main.js"></script>
-	<script src="../js/mandal_table.js"></script>
 	
 	<script src="../js/vendor/jquery.zoomooz.js"></script>
 	<script src="../js/vendor/jquery.zoomooz.min.js"></script>
@@ -26,8 +25,8 @@
 	</header>
 
 	<section>
-		<div class='article'>
-			<div id='mandal-container' class='zoomContainer zoomTarget'>
+		<div class='zoomViewport'>
+			<div class='zoomContainer' id='mandal-container container'>
 					<div class='mandal-top' id='mandal1'></div>
 					<div class='mandal-top' id='mandal2'></div>
 					<div class='mandal-top' id='mandal3'></div>
