Error: doesn't work zoomooz

--- a/public/html/mandal_main.html
+++ b/public/html/mandal_main.html
@@ -5,9 +5,10 @@
     
 	<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+	<!--<script src="../js/vendor/jquery-1.10.2.min"></script>
+	<script src="../js/vendor/jquery-ui-1.10.3.custom.min"></script>-->
 	<script src="../js/mandal_main.js"></script>
 	
-	<script src="../js/vendor/jquery.zoomooz.js"></script>
 	<script src="../js/vendor/jquery.zoomooz.min.js"></script>
     
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
@@ -26,7 +27,7 @@
 
 	<section>
 		<div class='zoomViewport'>
-			<div class='zoomContainer' id='mandal-container container'>
+			<div class='zoomContainer' id='mandal-container'>
 					<div class='mandal-top' id='mandal1'></div>
 					<div class='mandal-top' id='mandal2'></div>
 					<div class='mandal-top' id='mandal3'></div>
@@ -40,6 +41,9 @@
 					<div class='mandal-bot' id='mandal8'></div>
 			</div>
 		</div>
+		
+		<input type="button" class='button'>
+		
 	</section>
 	
 	<footer>
