--- a/public/html/mandal_table_center.html
+++ b/public/html/mandal_table_center.html
@@ -9,21 +9,21 @@
     
     <table class="mandal-table">
         <tr>
-        <td class="table-article zoomTarget" id="mandal-zoom1" data-closeclick='true'></td>
-        <td class="table-article zoomTarget" id="mandal-zoom2" data-closeclick='true'></td>
-        <td class="table-article zoomTarget" id="mandal-zoom3" data-closeclick='true'></td>
+        <td class="table-article zoomTarget" id="mandal-zoom1"></td>
+        <td class="table-article zoomTarget" id="mandal-zoom2"></td>
+        <td class="table-article zoomTarget" id="mandal-zoom3"></td>
         </tr>
 
         <tr>
-        <td class="table-article zoomTarget" id="mandal-zoom4" data-closeclick='true'></td>
-        <td class="table-article zoomTarget" data-closeclick='true'></td>
-        <td class="table-article zoomTarget" id="mandal-zoom5" data-closeclick='true'></td>
+        <td class="table-article zoomTarget" id="mandal-zoom4"></td>
+        <td class="table-article zoomTarget"></td>
+        <td class="table-article zoomTarget" id="mandal-zoom5"></td>
         </tr>
 
         <tr>
-        <td class="table-article zoomTarget" id="mandal-zoom6" data-closeclick='true'></td>
-        <td class="table-article zoomTarget" id="mandal-zoom7" data-closeclick='true'></td>
-        <td class="table-article zoomTarget" id="mandal-zoom8" data-closeclick='true'></td>
+        <td class="table-article zoomTarget" id="mandal-zoom6"></td>
+        <td class="table-article zoomTarget" id="mandal-zoom7"></td>
+        <td class="table-article zoomTarget" id="mandal-zoom8"></td>
         </tr>
     </table>
 
